# DevNexus_Backend

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
devnexus/: manage.py
devnexus/devnexus/: asgi.py  settings.py  urls.py  wsgi.py
devnexus/group/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
devnexus/group/migrations/: 0001_initial.py  0002_alter_group_group_uuid.py  0002_alter_group_options_alter_group_group_uuid_and_more.py  0003_alter_group_group_uuid.py  0003_alter_group_group_uuid_cardtag.py  0003_alter_group_group_uuid_grouptag.py  0004_alter_group_group_uuid.py  0004_alter_group_group_uuid_alter_group_icon.py  0004_remove_card_priority_card_tags_and_more.py  0005_alter_card_code_alter_group_group_uuid.py  0005_alter_group_group_uuid_card.py  0005_alter_group_group_uuid_columnboard.py  0006_alter_columnboard_unique_together_remove_card_status_and_more.py  0006_alter_group_group_uuid.py  0007_alter_group_group_uuid.py  0007_alter_grouptag_unique_together_and_more.py  0008_grouptag_code_alter_group_group_uuid.py  0009_alter_group_group_uuid.py  0010_rename_user_usertag_username_alter_group_group_uuid_and_more.py  0011_alter_group_group_uuid_alter_usertag_tag_and_more.py  0012_alter_group_group_uuid_alter_grouptag_group.py
devnexus/user/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
devnexus/user/migrations/: 0001_initial.py  0002_user_description.py
