[tool.poetry]
name = "devnexus"
version = "0.1.0"
description = ""
authors = ["daniru44"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.1.3"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
drf-spectacular = "0.27.2"
gunicorn = "^23.0.0"
shortuuid = "1.0.13"
pillow = "11.0.0"
python-decouple = "^3.8"
whitenoise = "^6.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
